test/libyul/yulSyntaxTests/invalid/jumpdest_disallowed.yul
{
    jumpdest()
}
// ----
// TypeError 5017: (6-14): The identifier "jumpdest" is reserved and can not be used.
